# thunderbird-dmarc

./: README.md  setup.cfg  thunderbird-dmarc.py  zsh-wrapper
