[metadata]
name = thunderbird-dmarc
author = Ondřej Sluka
description = Read your DMARC aggregate reports by drag-and-dropping from Thunderbird.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
    colorama >= 0.4.4

# TODO options.entry_points
